--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Game</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="main">
-        <div class="img-conainer">
-            <div class="choices" id="rock">
-                <img src="/rock.jpeg" alt="img">
-            </div>
-            <div class="choices" id="scissors">
-                <img src="/scissor.jpeg" alt="img">
-            </div>
-            <div class="choices" id="paper">
-                <img src="/paper.jpeg" alt="img">
-            </div>
+      <h1>Rock Paper Scissor</h1>
+      <div class="img-conainer">
+        <div class="choices" id="rock">
+          <img src="/rock.jpeg" alt="img" />
         </div>
-        <div class="message">
-            <h4>You Win</h4>
+        <div class="choices" id="scissors">
+          <img src="/scissor.jpeg" alt="img" />
         </div>
-        <div class="score">
-            <h3>Computer Score</h3><p>2</p>
-            <h3>Your Score</h3><p>3</p>
+        <div class="choices" id="paper">
+          <img src="/paper.jpeg" alt="img" />
         </div>
+      </div>
+      <div class="message">
+        <h3 id="compMsg"></h3>
+        <h4 id="msg"></h4>
+      </div>
+      <div class="score">
+        <h3>Computer Score</h3>
+        <p id="CompScore">0</p>
+        <h3>Your Score</h3>
+        <p id="UserScore">0</p>
+      </div>
     </div>
     <script src="/index.js"></script>
-</body>
+  </body>
 </html>
